# cbps

./: .gitignore  CMakeLists.txt
apps/sink/: CMakeLists.txt  Sink_ConfigSetDefinitions.xml  headset.mak  headset.xip  main.c  sink.doxyfile  sink_a2dp.c  sink_a2dp.h  sink_anc.c  sink_anc.h  sink_at_commands.c  sink_at_commands.h  sink_audio.c  sink_audio.h  sink_audio_prompts.c  sink_audio_prompts.h  sink_audio_routing.c  sink_audio_routing.h  sink_auth.c  sink_auth.h  sink_avrcp.c  sink_avrcp.h  sink_avrcp_browsing.c  sink_avrcp_browsing.h  sink_avrcp_browsing_channel.c  sink_avrcp_browsing_channel.h  sink_avrcp_qualification.c  sink_avrcp_qualification.h  sink_ble.c  sink_ble.h  sink_ble_advertising.c  sink_ble_advertising.h  sink_ble_gap.c  sink_ble_gap.h  sink_ble_scanning.c  sink_ble_scanning.h  sink_buttonmanager.c  sink_buttonmanager.h  sink_buttons.c  sink_buttons.h  (+134 more)
kernel/: ps.c  (+5 more)
lib/: CMakeLists.txt
lib/a2dp/: a2dp_api.c  a2dp_api.h  a2dp_caps_parse.c  a2dp_caps_parse.h  a2dp_codec_aac.c  a2dp_codec_aac.h  a2dp_codec_atrac.c  a2dp_codec_atrac.h  a2dp_codec_csr_aptx.c  a2dp_codec_csr_aptx.h  a2dp_codec_csr_aptx_acl_sprint.c  a2dp_codec_csr_aptx_acl_sprint.h  a2dp_codec_csr_faststream.c  a2dp_codec_csr_faststream.h  a2dp_codec_csr_tws.c  a2dp_codec_csr_tws.h  a2dp_codec_handler.c  a2dp_codec_handler.h  a2dp_codec_mp3.c  a2dp_codec_mp3.h  a2dp_codec_sbc.c  a2dp_codec_sbc.h  a2dp_command_handler.c  a2dp_command_handler.h  a2dp_data_block.c  a2dp_data_block.h  a2dp_init.c  a2dp_init.h  a2dp_l2cap_handler.c  a2dp_l2cap_handler.h  a2dp_packet_handler.c  a2dp_packet_handler.h  a2dp_private.h  a2dp_process_command.c  a2dp_process_command.h  a2dp_profile_handler.c  a2dp_profile_handler.h  a2dp_sdp.c  a2dp_sdp.h  a2dp_shim.c  (+1 more)
lib/aghfp/: aghfp_audio.c  aghfp_audio_handler.c  aghfp_audio_handler.h  aghfp_call.c  aghfp_call.h  aghfp_call_manager.c  aghfp_call_manager.h  aghfp_common.c  aghfp_common.h  aghfp_csr_features.c  aghfp_csr_features.h  aghfp_hfp_service_record.h  aghfp_hsp_service_record.h  aghfp_indicators.c  aghfp_indicators.h  aghfp_init.c  aghfp_init.h  aghfp_misc_handler.c  aghfp_misc_handler.h  aghfp_ok.c  aghfp_ok.h  aghfp_parse.c  aghfp_parse.h  aghfp_parse.parse  aghfp_parse_handler.c  aghfp_private.h  aghfp_profile_handler.c  aghfp_profile_handler.h  aghfp_receive_data.c  aghfp_receive_data.h  aghfp_rfc.c  aghfp_rfc.h  aghfp_sdp.c  aghfp_sdp.h  aghfp_send_data.c  aghfp_send_data.h  aghfp_shim.c  aghfp_shim.h  aghfp_slc.c  aghfp_slc_handler.c  (+8 more)
lib/audio/: audio.c  audio.h
lib/audio_plugin_common/: audio_plugin_common.c  audio_plugin_common.h
lib/avrcp/: avrcp.h  avrcp_absolute_volume.c  avrcp_absolute_volume.h  avrcp_avctp.c  avrcp_browsing.c  avrcp_browsing_control.c  avrcp_browsing_handler.c  avrcp_browsing_handler.h  avrcp_caps.c  avrcp_caps_handler.c  avrcp_caps_handler.h  avrcp_common.c  avrcp_common.h  avrcp_connect.c  avrcp_connect_handler.c  avrcp_connect_handler.h  avrcp_continuation.c  avrcp_continuation_handler.c  avrcp_continuation_handler.h  avrcp_element_attributes.c  avrcp_element_attributes_handler.c  avrcp_element_attributes_handler.h  avrcp_init.c  avrcp_init.h  avrcp_l2cap_handler.c  avrcp_l2cap_handler.h  avrcp_mediaplayer.c  avrcp_mediaplayer.h  avrcp_metadata_transfer.c  avrcp_metadata_transfer.h  avrcp_notification.c  avrcp_notification_handler.c  avrcp_notification_handler.h  avrcp_passthrough.c  avrcp_player_app_settings.c  avrcp_player_app_settings_handler.c  avrcp_player_app_settings_handler.h  avrcp_private.h  avrcp_profile_handler.c  avrcp_profile_handler.h  (+17 more)
lib/bdaddr/: bdaddr.h  bdaddr_bs_to_vm.c  bdaddr_is_same.c  bdaddr_is_zero.c  bdaddr_tp_bs_to_vm.c  bdaddr_tp_is_empty.c  bdaddr_tp_is_same.c  bdaddr_tp_set_empty.c  bdaddr_tp_vm_to_bs.c  bdaddr_typed_bs_to_vm.c  (+5 more)
(+1151 files in other folders)
